option(
  'gnome',
  type: 'boolean',
  value: 'true',
)

option(
  'cinnamon',
  type: 'boolean',
  value: 'true',
)

option(
  'flashback',
  type: 'boolean',
  value: 'true',
)

option(
  'xfce',
  type: 'boolean',
  value: 'true',
)

option(
  'mate',
  type: 'boolean',
  value: 'true',
)

option(
  'openbox',
  type: 'boolean',
  value: 'true',
)

option(
  'plank',
  type: 'boolean',
  value: 'false',
)

option(
  'telegram',
  type: 'boolean',
  value: 'false',
)

option(
  'tweetdeck',
  type: 'boolean',
  value: 'false',
)

option(
  'airforsteam',
  type: 'boolean',
  value: 'false',
)

option(
  'gtk_next',
  type: 'boolean',
  value: 'true',
)
