option(
  'key_selection_color',
  type: 'string',
  value: '#3f51b5',
  description: 'Selection (Primary) color',
)

option(
  'key_accent_color',
  type: 'string',
  value: '#7986cb',
  description: 'Accent (Secondary) color',
)

option(
  'key_suggestion_color',
  type: 'string',
  value: '#673ab7',
  description: 'Suggestion (Secondary) color',
)

option(
  'key_destruction_color',
  type: 'string',
  value: '#f44336',
  description: 'Destruction (Tertiary) color',
)

option(
  'gnome',
  type: 'boolean',
  value: 'true',
)

option(
  'cinnamon',
  type: 'boolean',
  value: 'true',
)

option(
  'flashback',
  type: 'boolean',
  value: 'true',
)

option(
  'xfce',
  type: 'boolean',
  value: 'true',
)

option(
  'mate',
  type: 'boolean',
  value: 'true',
)

option(
  'openbox',
  type: 'boolean',
  value: 'true',
)

option(
  'plank',
  type: 'boolean',
  value: 'false',
)

option(
  'telegram',
  type: 'boolean',
  value: 'false',
)

option(
  'tweetdeck',
  type: 'boolean',
  value: 'false',
)

option(
  'airforsteam',
  type: 'boolean',
  value: 'false',
)

option(
  'gtk_next',
  type: 'boolean',
  value: 'true',
)
